@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.4.10"
+  VERSION = "1.4.11"
 end
